--- a/src/lazysearch/styles.css
+++ b/src/lazysearch/styles.css
@@ -1,3 +1,8 @@
+.lmgtfy html, body {
+    background-color: #8EC5FC;
+    background-image: linear-gradient(62deg, #8EC5FC 0%, #E0C3FC 100%);
+}
+
 .lmgtfy h1 {
     font-size: 5vw;
 }
