--- a/src/lazysearch/styles.css
+++ b/src/lazysearch/styles.css
@@ -1,10 +1,13 @@
-.lmgtfy html, body {
+.lmgtfy {
+    height: 100vh;
     background-color: #8EC5FC;
     background-image: linear-gradient(62deg, #8EC5FC 0%, #E0C3FC 100%);
 }
 
 .lmgtfy h1 {
     font-size: 5vw;
+    margin: 0;
+    padding: 2vw;
 }
 
 .lmgtfy .user-input {
