--- a/src/StressRelief/index.css
+++ b/src/StressRelief/index.css
@@ -1,15 +1,18 @@
-html, body {
-    height: 100%;
-    width: 100%;
-}
-body {
+.stress-relief {
+    height: 100vh;
+    width: 100vw;
     background-color: #eee;
     position: relative;
     margin: 0;
 }
 
+.stress-relief h1 {
+    margin: 0;
+    padding: 20px;
+}
+
 .container1 {
-    height: 300px;
+    height: 275px;
 }
 
 ul li {
