--- a/src/lazysearch/styles.css
+++ b/src/lazysearch/styles.css
@@ -1,28 +1,28 @@
 .lmgtfy {
-    height: 100vh;
-    background-color: #8EC5FC;
-    background-image: linear-gradient(62deg, #8EC5FC 0%, #E0C3FC 100%);
+  height: 100vh;
+  background-color: #8ec5fc;
+  background-image: linear-gradient(62deg, #8ec5fc 0%, #e0c3fc 100%);
 }
 
 .lmgtfy h1 {
-    font-size: 5vw;
-    margin: 0;
-    padding: 2vw;
+  font-size: 5vw;
+  margin: 0;
+  padding: 2vw;
 }
 
 .lmgtfy .user-input {
-    height: 1.5vw;
-    width: 30vw;
-    margin: 2vw 1vw 10vw auto;
+  height: 1.5vw;
+  width: 30vw;
+  margin: 2vw 1vw 10vw auto;
 }
 
 .lmgtfy a {
-    font-size: 8vw;
-    text-decoration: none;
+  font-size: 8vw;
+  text-decoration: none;
 }
 
 .lmgtfy button {
-    background-color: transparent;
-    border: none;
-    cursor: pointer;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
 }
