--- a/src/HomePage/index.css
+++ b/src/HomePage/index.css
@@ -8,12 +8,20 @@
 
 .home-page h1 {
     margin: 0;
-    padding: 20px;
+    padding: 0 20px;
+    padding-top: 20px;
 }
 
 .home-container {
-    width: 90%;
-    height: 150px;
+    margin: auto;
+    margin-top: 0;
+    padding-top: 0;
+    width: 670px;
+}
+
+.home-container2 {
+    padding: 15px;
+    height: 170px;
 }
 
 a {
@@ -24,6 +32,8 @@ a {
 .teapot {
     float: left;
     width: 200px;
+    padding: 0;
+    margin: 0;
 }
 
 .card {
