--- a/src/howdoispell/styles.css
+++ b/src/howdoispell/styles.css
@@ -13,9 +13,22 @@
 .howDoISpell .user-input {
   height: 1.5vw;
   width: 30vw;
-  margin: 2vw 1vw 10vw auto;
+  margin: 2vw 1vw 1vw auto;
 }
 
 .howDoISpell button {
-  margin-top: 10px;
+  background-color: #000000;
+  cursor: pointer;
+  border: none;
+  text-align: center;
+  text-decoration: none;
+  border-radius: 25px;
+  padding: 1vw;
+  margin-bottom: 2vw;
+  color: white;
+  font-size: 1.5vw;
+}
+
+.howDoISpell .spelling p {
+  font-size: 5vw;
 }
