--- a/src/HomePage/index.css
+++ b/src/HomePage/index.css
@@ -1,8 +1,10 @@
+body {
+    background-color: #eee;
+}
+
 .home-page {
     height: 100vh;
     width: 100vw;
-    background-color: #eee;
-    position: relative;
     margin: 0;
 }
 
