--- a/src/HomePage/index.css
+++ b/src/HomePage/index.css
@@ -3,9 +3,10 @@ body {
 }
 
 .home-page {
-    height: 100vh;
-    width: 100vw;
+    width: 100%;
+    height: 125vh;
     margin: 0;
+    padding-top: 4vw;
 }
 
 .home-page h1 {
@@ -18,7 +19,7 @@ body {
     margin: auto;
     margin-top: 0;
     padding-top: 0;
-    width: 670px;
+    width: 75vw;
 }
 
 .home-container2 {
