--- a/src/howdoispell/styles.css
+++ b/src/howdoispell/styles.css
@@ -1,7 +1,7 @@
 .howDoISpell {
   height: 100vh;
-  background-color: #8ec5fc;
-  background-image: linear-gradient(62deg, #8ec5fc 0%, #e0c3fc 100%);
+  background-color: #FEE140;
+  background-image: linear-gradient(90deg, #FEE140 0%, #FA709A 100%);
 }
 
 .howDoISpell h1 {
@@ -24,6 +24,7 @@
   text-decoration: none;
   border-radius: 25px;
   padding: 1vw;
+  margin-top: 2vw;
   margin-bottom: 2vw;
   color: white;
   font-size: 1.5vw;
