--- a/src/makeAcronym/styles.css
+++ b/src/makeAcronym/styles.css
@@ -1,7 +1,7 @@
-.makeAcronym {
+  .makeAcronym {
     height: 100vh;
-    background-color: #8ec5fc;
-    background-image: linear-gradient(62deg, #8ec5fc 0%, #e0c3fc 100%);
+    background-color: #FA8BFF;
+    background-image: linear-gradient(45deg, #FA8BFF 0%, #2BD2FF 52%, #2BFF88 90%);
   }
   
   .makeAcronym h1 {
