--- a/src/Email-Lecturer/index.css
+++ b/src/Email-Lecturer/index.css
@@ -1,6 +1,6 @@
 .lecture-page-main-container {
     background-color: #708cdf;
-    background-image: linear-gradient(150deg, #708cdf 0%, #6ddbd9 50%, #ffffff 100%);
+    background-image: linear-gradient(240deg, #22c1c3 0%, #fdbb2d 100%);
     height: 100vh;
 }
 
